feat: the front end build and attacehd to docker compose
